2005-06-06	Vittal Aithal	<gforge@aithal.org>

	* [#1279] Fix to cross-site-scripting off project registration page
	and login page.

2005-05-27  Tom Copeland  <tom@infoether.com>

	* www/admin/groupedit.php: Applied patch 1296 'Patch to not update SCM
	in groupedit if this group don't use SCM' from Vincent Ruiz.

2005-05-27  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* www/tracker/admin/updates.php: addslashes() before using string
	in SQL.

2005-05-20	Marcelo Mottalli <marcelo@gforgegroup.com>

	* Enabled option for sending a message to the administrators when 
	requesting joining to a project

2005-05-20  Tom Copeland  <tom@infoether.com>

	* common/frs/FRSFile: Small cleanup to error msg.

2005-05-19  Tom Copeland  <tom@infoether.com>

	* docs/README.Plugin: Applied patch from Vittal Aithal.

2005-05-18  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* www/admin/approve-pending.php: Removed reference to removed
	www/include/proj_email.php.
	* [#1131] New configuration variable $sys_path_to_mailman.

2005-04-27  Christian Bayle <bayle@debian.org>
	
	* [#1082] Added the capability to change db port in setup
	* Don't ask to choose scm when only one is available
	* Removed unused outdated ./www/include/proj_email.php
	* [#1045] Remove references to shell accounts on a gforge which doesn't
	provide them

2005-05-17	Marcelo Mottalli <marcelo@gforgegroup.com>

	* Applied patch #1278, provided by Vittal Aithal (vittal)

2005-05-17  Tom Copeland  <tom@infoether.com>

	* www/include/pre.php: Applied Google Accelerator blocker from Martin
	Langhoff.

2005-05-15  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* cronjobs/mail/mailaliases.php: [#1262] __FILE__ is used instead
	of hard-coded path.

2005-05-14  Francisco Gimeno <kikov@kikov.org>

	* www/favicon.ico: [#1271] Added favicon.ico

2005-05-13  Tom Copeland  <tom@infoether.com>

	* www/include/languages/Base.tab: Added new reporting items.
	* www/reporting/useract_graph.php: Moved some strings to Base.tab